--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = spde
+name = SPDE
 version = 0.0.1
 description = Utilities for geostatistics based on stochastic partial differential equations
 long_description = file: README.md
