--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include src/spdeLogit/TurboOptimizer.hpp
-include src/spdeLogit/spde.pyx
+include src/TurboOptimizer.hpp
+include src/spde.pyx
 include pyproject.toml
